--- a/static/frontend/login.html
+++ b/static/frontend/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <script src="http://localhost:4000/static/js/talk.js"></script>
+        <script src="../js/talk.js"></script>
     </head>
     <body>
         <div id="login-form">
